syntax = "proto3";

option go_package = ".;generated";

package protobuf;

import "google/protobuf/empty.proto";
import "protobuf/user.proto";
import "protobuf/chat.proto";

service Chats {
  rpc GetChatById(GetChatArguments) returns(Chat) {}
  rpc GetChatInfoById(GetChatArguments) returns(ChatInListUser) {}
  rpc EditChat(EditChatModel) returns(Chat) {}
  rpc CreateChat(CreateChatArguments) returns(Chat) {}
  rpc DeleteChatById(ChatID) returns(google.protobuf.Empty) {}
  rpc CheckExistUserInChat(ExistChatArguments) returns(google.protobuf.Empty) {}
  rpc GetListUserChats(UserID) returns(ArrayChatInListUser) {}
  rpc GetSearchChatsMessagesChannels(SearchChatsArgumets) returns(FoundedChatsMessagesChannels) {}
}
